--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 					<ul>
 						<li>Home</li>
 						<li>About</li>
+						<li>Fab Lab Safety</li>
+						<li>Tool</li>
 						<li>Contact</li>
 					</ul>	
 				</div>
