--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 				<div id="nav">
 					<h3>Navigation</h3>
 					<ul>
-						<li>Home</li>
-						<li>About</li>
-						<li>Fab Lab Safety</li>
-						<li>Tool</li>
-						<li>Contact</li>
+						<li><a class="selected" href="">Home</a></li>
+						<li><a href="">About</a></li>
+						<li><a href="">Fablab Safety</a></li>
+						<li><a href="">Tool</a></li>
+						<li><a href="">Web Development</a></li>
+						<li><a href="">CAD</a></li>
 					</ul>	
 				</div>
 				
