--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 						<li><a href="">Fablab Safety</a></li>
 						<li><a href="">Tool</a></li>
 						<li><a href="">Web Development</a></li>
+							<p><img src="BRIDGING_1.jpeg" alt="Bridging" width="240" height="160">
+								
 						<li><a href="">CAD</a></li>
 					</ul>	
 				</div>
