--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 					<ul>
 						<li><a class="selected" href="">Home</a></li>
 						<li><a href="">About</a></li>
+							<img src="BRIDGING_1.jpeg" alt="Bridging" width="240" height="160">
 						<li><a href="">Fablab Safety</a></li>
 						<li><a href="">Tool</a></li>
 						<li><a href="">Web Development</a></li>
