--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
 					<ul>
 						<li><a class="selected" href="">Home</a></li>
 						<li><a href="">About</a></li>
-							<img src="BRIDGING_1.jpeg" alt="Bridging" width="240" height="160">
+<html>
+	<head>
+		<title>My Website</title>
+		<link rel="stylesheet" type="text/css" href="style.css" />
+		</head>
+	<body>
+		<div id="container">
+			<div id="header">
+				<h1>My Portfolio</h1>
 						<li><a href="">Fablab Safety</a></li>
 						<li><a href="">Tool</a></li>
 						<li><a href="">Web Development</a></li>
