--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
 					<h3>Navigation</h3>
 					<ul>
 						<li><a class="selected" href="">Home</a></li>
-						<li><a href="">About</a></li>
-						<li><a href="">Fablab Safety</a></li>
-						<li><a href="">Tool</a></li>
-						<li><a href="">Web Development</a></li>
-						<li><a href="">CAD</a></li>
-						<li><a href="">KEYCHAIN</a></li>
+						<li><a href="about.html">About</a></li>
+						<li><a href="safety.html">Fablab Safety</a></li>
+						<li><a href="tool.html">Tool</a></li>
+						<li><a href="webdevelopment.html">Web Development</a></li>
+						<li><a href="computeraideddeisgn.html">Computer Aided Design</a></li>
+						<li><a href="3dprintinghtml.html">3D Printing & Scanning</a></li>
+						<li><a href="computercontrolledcutting.html">Computer Controlled Cutting</a></li>
+						<li><a href="embeddedprogramming.html">Embedded Programming w/Arduino</a></li
+						<li><a href="project.html">Project</a></li>
 					</ul>	
 				</div>
 				
