--- a/about.html
+++ b/about.html
@@ -4,8 +4,7 @@
   <title>About</title>
 </head>
 <body>
-  <h2>hahahahahahaha</h2>
-  <p>blablablabla</p>
+  <h1 style="background-color:Orange;">ABOUT</h1>
   <p>blablabla</p>
     <li> alalalala</li>
     <li> alalalala</li>
