--- a/about.html
+++ b/about.html
@@ -4,7 +4,9 @@
   <title>About</title>
 </head>
 <body>
+  <h1 style="background-color:Orange;"></h1>
   <h1 style="background-color:Orange;">ABOUT</h1>
+  <h1 style="background-color:Orange;"></h1>
   <p>blablabla</p>
     <li> alalalala</li>
     <li> alalalala</li>
