--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 						<li><a href="tool.html">Tool</a></li>
 						<li><a href="webdevelopment.html">Web Development</a></li>
 						<li><a href="computeraideddeisgn.html">Computer Aided Design</a></li>
-						<li><a href="3dprintinghtml.html">3D Printing & Scanning</a></li>
+						<li><a href="3dprinting.html">3D Printing & Scanning</a></li>
 						<li><a href="computercontrolledcutting.html">Computer Controlled Cutting</a></li>
 						<li><a href="embeddedprogramming.html">Embedded Programming w/Arduino</a></li
 						<li><a href="project.html">Project</a></li>
