--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<body>
 		<div id="container">
 			<div id="header">
-				<h1>My Portfolio</h1>
+				<h1>Hafiza's Portfolio</h1>
 			</div>
 			<div id="content">
 				<div id="nav">
