--- a/safety.html
+++ b/safety.html
@@ -30,6 +30,11 @@
 				<p>Before entering or using the machineries, we need to ensure that we are all aware of the safety and regulations of every lab and machines before proceeding with our project.
 				<ol>
 				<li>Students are not allowed to enter and work in any laboratory or workshop without the supervision of the lecturer in charge or Technical Supporting Officer.</li>
+				<li>Students must be in a proper attire to enter the lab</li>
+					<ul>
+					<li>Do not wear <b>loose-sleeved</b> clothing and <b>jewellery</b></li>
+						
+				<li></li>
 				<ol>
 
 					
