--- a/safety.html
+++ b/safety.html
@@ -32,7 +32,12 @@
 				<li>Students are not allowed to enter and work in any laboratory or workshop without the supervision of the lecturer in charge or Technical Supporting Officer.</li>
 				<li>Students must be in a proper attire to enter the lab</li>
 					<ul>
-					<li>Do not wear <b>loose-sleeved</b> clothing and <b>jewellery</b></li>
+					<li>Do not wear <b>loose-sleeved</b> clothing and <b>jewellery.</b></li>
+					<li>Do not use compressed air to clean your clothing.</li>
+					<li>Anyone with long hair should <b>tie up their hair</b> to prevent entanglement with rotating machinery</li>	
+					<li>Be in collared shirt or T-shirt and full-length trousers. </li>
+					<li>Be in <b>fully covered shoes</b> at all time.</li>
+					<li>Different laboratories and workshops required the use of additional safety equipments.Always follow the instructions regarding the safety equipments that needs to be used before operating the machine.</li>
 						
 				<li></li>
 				<ol>
