--- a/safety.html
+++ b/safety.html
@@ -38,13 +38,11 @@
 					<li>Be in collared shirt or T-shirt and full-length trousers. </li>
 					<li>Be in <b>fully covered shoes</b> at all time.</li>
 					<li>Different laboratories and workshops required the use of additional safety equipments.Always follow the instructions regarding the safety equipments that needs to be used before operating the machine.</li>	
-				<li></li>
+					<ul>		
+				<li>No food and drinks allowed in the workshop or laboratories</li>
+				<li>Ensure that you are familiar with the placment of the first-aid box, safety eye-wash and /or shower, chemical spill kit within each laboratory and workshop in case of any emergencies.</li>
 				<ol>
-
 					
-				<p>Paragraph 2
-				
-				<p>Paragraphgraph 3
 				</div>
 			</div>
 			<div id="footer">
