--- a/safety.html
+++ b/safety.html
@@ -41,6 +41,9 @@
 					<ul>		
 				<li>No food and drinks allowed in the workshop or laboratories</li>
 				<li>Ensure that you are familiar with the placment of the first-aid box, safety eye-wash and /or shower, chemical spill kit within each laboratory and workshop in case of any emergencies.</li>
+				<li>Keep your work area clean before you leave the laboratory/workshop.</li>
+				<li>Approach your lecturer whenever youre in doubt</li>		
+						
 				<ol>
 					
 				</div>
