--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 				<div id="main">
 					<h2>About</h2>
 					
-				<p> I am Hafizatul and i am currently studying studying in Singapore Polytechnic pursuing Diploma in Architecture. I enjoy crafting and this website is where all the work that i have done in Digital Fabrication will be displayed.</p> 
+				<p>I am currently studying in Singapore Polytechnic pursuing Diploma in Architecture. I enjoy crafting and this website is where all the work that i have done in Digital Fabrication will be displayed.</p> 
 				</div>
 			</div>
 			<div id="footer">
