--- a/webdevelopment.html
+++ b/webdevelopment.html
@@ -31,7 +31,9 @@
 					
 				<p> Turtorials on ways to begin with the <b>html</b> and <b>css</b> is available on youtube for the basic setup. Beginners are adviced to watch these videos to understand the basics for coding and get used to the system. 
 				
-				<p>
+				<p> These are the links that will direct you to youtube for the turtorials.
+					<img src="CSS.JPG" alt="cssturtorial">
+					<a href="https://youtu.be/0afZj1G0BIE">click here to learn css</a>
 				</div>
 			</div>
 			<div id="footer">
