--- a/about.html
+++ b/about.html
@@ -27,7 +27,9 @@
 				<div id="main">
 					<h2>About</h2>
 					
-				<p>I am currently studying in Singapore Polytechnic pursuing Diploma in Architecture. I enjoy crafting and this website is where all the work that i have done in Digital Fabrication will be displayed.</p> 
+				<p> Digital fabrication is based on a hands-on work which is for those who have interest is designing products. It also teaches us new advanced softwares to build our design in 3D.</p> 
+				<p>Safety is taken seriously when we are at the workshop. Everyone should be in an appropriate attire whenever handling the machines in the workshop.</p>
+				
 				</div>
 			</div>
 			<div id="footer">
