--- a/project.html
+++ b/project.html
@@ -41,7 +41,7 @@
 				<img src="IMAGE/PROJECT_LASERCUTTING.jpg" alt="1" height="150" float="left"> <img src="IMAGE/PROJECT_LASER.jpeg" alt="1" height="150" float="left"> <img src="IMAGE/PROJECT_LASERCUTTING_ACRYLIC.jpg" alt="1" height="150" float="left">	
 				
 				<p> All the edges are glued together for a stronger bond</p>
-				<img src="IMAGE/PROJECT_GLUE3.jpg" alt="1" height="150" float="left"> <img src="IMAGE/PROJECT_GLUE3.jpg" alt="1" height="150" float="left"> <img src="IMAGE/PROJECT_GLUED.jpeg" alt="1" height="150" float="left">
+				<img src="IMAGE/PROJECT_GLUE3.jpg" alt="1" height="150" float="left"> <img src="IMAGE/PROJECT_GLUE.jpg" alt="1" height="150" float="left"> <img src="IMAGE/PROJECT_GLUED.jpeg" alt="1" height="150" float="left">
 					
 				<p> 14 LED lights are used for this product.</p>
 				<img src="IMAGE/PROJECT_LED.jpeg" alt="1" height="150" float="left">
