--- a/project.html
+++ b/project.html
@@ -53,7 +53,7 @@
 				<img src="IMAGE/PROJECT_ROPE.jpg" alt="1" height="150" float="left">
 					
 				<p> And this is the result of our product.</p>
-				<img src="IMAGE/PROJECT_ROPE.jpg" alt="1" height="150" float="left">
+				<img src="IMAGE/PROJECT_FINAL1.jpeg" alt="1" height="150" float="left"> <img src="IMAGE/PROJECT_FINAL2.jpeg" alt="1" height="150" float="left">
 					
 				</div>
 			</div>
